updated FileSorter.java